Java 구현 추가
표준 JDK 21 만으로 python/main.pyw 와 같은 동작을 구현.
- HTTP: java.net.http.HttpClient, 세 끼 조회는 가상 스레드로 병렬화
- JSON: 외부 라이브러리 없이 DDISH_NM 값만 정규식으로 추출
- 이미지: ImageIO + Graphics2D, Pillow 와 같은 좌표/폰트 사용.
  기본 압축이 약해 PNG 는 최대 압축으로 저장
- 바탕화면: java.lang.foreign 으로 user32!SystemParametersInfoW 직접 호출
  (JDK 21 에서 FFM 은 preview 라 --enable-preview 필요)

build.ps1 -Package 는 JRE 를 번들한 app-image 를 만들고
release/MealWallpaper-1.0-win-x64.zip 으로도 저장한다.
Java 가 설치되지 않은 PC 에서도 압축만 풀면 실행된다.

Python 구현은 python/ 으로, Java 구현은 java/ 로 분리했다.
main.pyw 는 하위 폴더로 옮겨져도 기존처럼 동작하도록 시작 시
리포 루트로 chdir 한다. example.png 는 Java 구현으로 생성했다.